--- a/Hacksmiths/Loginpage/quizzes/quiz.css
+++ b/Hacksmiths/Loginpage/quizzes/quiz.css
@@ -1,31 +1,43 @@
+@font-face {
+    font-family: 'f25_bank_printerregular';
+    src: url('../fonts/bankprinterfont/f25_bank_printer-webfont.woff2') format('woff2'),
+         url('../fonts/bankprinterfont/f25_bank_printer-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 *{
     margin:0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
 
 body{
+    font-family: 'f25_bank_printerregular';
+    font-size: 10px;
     background-image:
-        linear-gradient(to top, rgb(123, 69, 123), transparent),
-        url('images\quiz.jpeg');
+    url(../images/quiz.jpeg),
+        linear-gradient(to top, rgb(123, 69, 123), transparent);
         opacity: .92;
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: 100%, 100%;
 }
 .app{
-    background-color:rgb(232, 203, 139) ;
+    background-color:rgb(157, 82, 97) ;
     width: 90%;
     max-width: 600px;
-    margin: 100px auto 0;
+    margin: 60px auto 0;
     border-radius: 10px;
     padding: 30px;
 }
 
-.app h1{
+.app h2{
+    font-family: 'f25_bank_printerregular';
+    font-size: 10px;
     font-size: 25px;
-    color:rgb(31, 67, 38);
+    color:rgb(37, 20, 75);
     font-weight: 600;
     border-bottom:1px solid #333;
     padding-bottom: 30px;
@@ -33,20 +45,23 @@ body{
 
 .quiz{
     padding: 20px 0;
-    background-color:rgb(31, 67, 38) ;
+    background-color:rgb(56, 60, 87) ;
+    border-radius: 10px;
 }
 
 .quiz h2{
     font-size: 18px;
     color:rgb(232, 203, 139);
     font-weight: 600;
+    padding-left: 5px;
 }
 
 .btn{
-    background: #61875f;
-    color:#fff;
+    background: #b7cce9;
+    color:#000000;
     font-weight: 500px;
-    width:100%;
+    font-size: 16px;
+    width:95%;
     border: 1px solid rgb(232, 203, 139);
     padding: 10px;
     margin: 10px 0;
@@ -54,6 +69,8 @@ body{
     border-radius: 4px;
     cursor: pointer;
     transition: all 0.3s;
+    margin-left: 12px;
+    margin-left: 12px;
 }
 
 .btn:hover:not([disabled]){
@@ -65,7 +82,7 @@ body{
 }
 
 #submit{
-    background: #61875f;
+    background: #83508c;
     color:#fff;
     font-weight: 500px;
     width:150px;
